Configuration class added

--- a/ClothBazar.Database/ClothBazar.Database.csproj
+++ b/ClothBazar.Database/ClothBazar.Database.csproj
@@ -61,6 +61,10 @@
     <Compile Include="Migrations\201904140817223_IsFeatured.Designer.cs">
       <DependentUpon>201904140817223_IsFeatured.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201906081056097_configurationtable.cs" />
+    <Compile Include="Migrations\201906081056097_configurationtable.Designer.cs">
+      <DependentUpon>201906081056097_configurationtable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -83,6 +87,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201904140817223_IsFeatured.resx">
       <DependentUpon>201904140817223_IsFeatured.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201906081056097_configurationtable.resx">
+      <DependentUpon>201906081056097_configurationtable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
